@@ -67,10 +67,14 @@ public class UserSolutionServiceImp implements IUserSolutionService {
         UUID languageUuid = UUID.fromString(userSolutionDto.getLanguageId());
         UUID userUuid = UUID.fromString(userSolutionDto.getUserId());
         String status = userSolutionDto.getStatus();
-        ChallengeStatus challengeStatus = determineChallengeStatus(status);
         List<SolutionDocument> solutionDocuments;
 
+        if (status == null || status.isEmpty()) {
+            log.error("POST operation failed due to invalid challenge status parameter");
+            return Mono.error(new IllegalArgumentException("Status not allowed"));
+        }
 
+        ChallengeStatus challengeStatus = determineChallengeStatus(status);
         if (challengeStatus == null) {
             log.error("POST operation failed due to invalid challenge status parameter");
             return Mono.error(new IllegalArgumentException("Status not allowed"));
@@ -82,29 +86,26 @@ public class UserSolutionServiceImp implements IUserSolutionService {
 
         solutionDocuments = List.of(
                 SolutionDocument.builder()
-                        .uuid(UUID.randomUUID())
                         .solutionText(userSolutionDto.getSolutionText())
                         .build()
         );
-
         return saveValidSolution(userUuid, challengeUuid, languageUuid, challengeStatus, solutionDocuments)
                 .map(savedDocument -> UserSolutionScoreDto.builder()
                         .userId(String.valueOf(savedDocument.getUserId()))
                         .languageId(String.valueOf(savedDocument.getLanguageId()))
                         .challengeId(String.valueOf(savedDocument.getChallengeId()))
-                        .solutionText(savedDocument.getSolutionDocument().getFirst().getSolutionText())
+                        .solutionText(savedDocument.getSolutionDocument().get(0).getSolutionText())
+                        .status(savedDocument.getStatus().name()) // Ensure status is included in the DTO
                         .score(savedDocument.getScore())
                         .errors(savedDocument.getErrors())
                         .build())
                 .doOnSuccess(userSolutionDocument -> log.info("Successfully POSTed solution"))
                 .doOnError(error -> log.error("POST operation failed with error message: {}", error.getMessage()));
     }
-
     public Mono<UserSolutionDocument> markAsBookmarked(String uuidChallenge, String uuidLanguage, String uuidUser, boolean bookmarked) {
         UUID challengeId = UUID.fromString(uuidChallenge);
         UUID languageId = UUID.fromString(uuidLanguage);
         UUID userId = UUID.fromString(uuidUser);
-
         return userSolutionRepository
                 .findByUserIdAndChallengeIdAndLanguageId(userId, challengeId, languageId)
                 .flatMap(userSolutionDocument -> {
@@ -113,8 +114,7 @@ public class UserSolutionServiceImp implements IUserSolutionService {
                 })
                 .switchIfEmpty(createAndSaveNewBookmark(challengeId, languageId, userId, bookmarked));
     }
-
-    private Mono<UserSolutionDocument> createAndSaveNewBookmark(UUID challengeId, UUID languageId, UUID userId, boolean bookmarked) {
+    public Mono<UserSolutionDocument> createAndSaveNewBookmark(UUID challengeId, UUID languageId, UUID userId, boolean bookmarked) {
         UserSolutionDocument newDocument = UserSolutionDocument.builder()
                 .uuid(UUID.randomUUID())
                 .userId(userId)
@@ -122,55 +122,38 @@ public class UserSolutionServiceImp implements IUserSolutionService {
                 .languageId(languageId)
                 .bookmarked(bookmarked)
                 .build();
-
         return userSolutionRepository.save(newDocument).thenReturn(newDocument);
     }
-
     public Mono<UserSolutionDocument> saveValidSolution(UUID userUuid, UUID challengeUuid, UUID languageUuid, ChallengeStatus challengeStatus, List<SolutionDocument> solutionDocuments) {
-
-       return userSolutionRepository.findByUserIdAndChallengeIdAndLanguageId(userUuid, challengeUuid, languageUuid)
-               .flatMap(existingSolution -> {
-                   if (existingSolution.getStatus().equals(ChallengeStatus.ENDED) || existingSolution.getStatus().equals(ChallengeStatus.SCORE_PENDING)) {
-                       return Mono.error(new UnmodifiableSolutionException("Cannot modify solution with status ENDED or SCORE_PENDING"));
-                   }
-                   if (challengeStatus == ChallengeStatus.STARTED) {
-                       existingSolution.setSolutionDocument(solutionDocuments);
-                       existingSolution.setStatus(challengeStatus);
-                       return userSolutionRepository.save(existingSolution);
-                   }
-                   return Mono.empty();
-               })
-
-               .switchIfEmpty(Mono.defer(() -> {
-                   if (challengeStatus == ChallengeStatus.SENT) {
-                       UserSolutionDocument userSolutionDocument = UserSolutionDocument.builder()
-                               .uuid(UUID.randomUUID())
-                               .userId(userUuid)
-                               .challengeId(challengeUuid)
-                               .languageId(languageUuid)
-                               .solutionDocument(solutionDocuments)
-                               .status(ChallengeStatus.SCORE_PENDING)
-                               .build();
-
-                       return Mono.fromFuture(() -> getDataFromMicroScore(challengeUuid, languageUuid, solutionDocuments.getFirst().getSolutionText())
-                               .thenCompose(data -> {
-                                   userSolutionDocument.setStatus(ChallengeStatus.ENDED);
-                                   userSolutionDocument.setScore(data.getScore());
-                                   userSolutionDocument.setErrors(data.getErrors());
-                                   return userSolutionRepository.save(userSolutionDocument).toFuture();
-                               }))
-                               .doOnError(e -> {
-                                   log.error("Error updating solution status", e);
-                                   throw new SolutionNotFoundException("Error updating solution status");
-                               });
-                   }
-                   return Mono.empty();
-               }));
+        return userSolutionRepository.findByUserIdAndChallengeIdAndLanguageId(userUuid, challengeUuid, languageUuid)
+                .flatMap(existingSolution -> {
+                    if (existingSolution.getStatus().equals(ChallengeStatus.ENDED) || existingSolution.getStatus().equals(ChallengeStatus.SCORE_PENDING)) {
+                        return Mono.error(new UnmodifiableSolutionException("Cannot modify solution with status ENDED or SCORE_PENDING"));
+                    }
+                    if (challengeStatus == ChallengeStatus.STARTED) {
+                        existingSolution.setSolutionDocument(solutionDocuments);
+                        existingSolution.setStatus(challengeStatus);
+                        return userSolutionRepository.save(existingSolution);
+                    }
+                    return Mono.just(existingSolution); // Return the existing solution if not modified
+                })
+                .switchIfEmpty(Mono.defer(() -> {
+                    if (challengeStatus == ChallengeStatus.SENT) {
+                        UserSolutionDocument userSolutionDocument = UserSolutionDocument.builder()
+                                .uuid(UUID.randomUUID())
+                                .userId(userUuid)
+                                .challengeId(challengeUuid)
+                                .languageId(languageUuid)
+                                .solutionDocument(solutionDocuments)
+                                .status(ChallengeStatus.SCORE_PENDING)
+                                .build();
+                        return userSolutionRepository.save(userSolutionDocument);
+                    }
+                    return Mono.empty();
+                }));
     }
-
     public CompletableFuture<ScoreResponseDto> getDataFromMicroScore(UUID uuidChallenge, UUID uuidLanguage, String solutionText) {
         ScoreRequestDto request = new ScoreRequestDto(uuidChallenge, uuidLanguage, solutionText);
-
         return zmqClient.sendMessage(request, ScoreResponseDto.class)
                 .thenApply(response -> {
                     ScoreResponseDto responseDto = (ScoreResponseDto) response;
@@ -184,8 +167,7 @@ public class UserSolutionServiceImp implements IUserSolutionService {
                     return new ScoreResponseDto();
                 });
     }
-
-    private ChallengeStatus determineChallengeStatus(String status) {
+    public ChallengeStatus determineChallengeStatus(String status) {
         if (status == null || status.isEmpty()) {
             return ChallengeStatus.STARTED;
         } else if (status.equalsIgnoreCase(ChallengeStatus.EMPTY.getValue())) {
@@ -199,23 +181,17 @@ public class UserSolutionServiceImp implements IUserSolutionService {
         }
         return null;
     }
-
     public Flux<UserSolutionDto> showAllUserSolutions(UUID userUuid) {
         return userSolutionRepository.findByUserId(userUuid)
                 .flatMap(converter::fromUserSolutionDocumentToUserSolutionDto);
     }
-
     @Override
     public Mono<List<ChallengeStatisticsDto>> getChallengeStatistics(List<UUID> challengeIds) {
-
         List<ChallengeStatisticsDto> challengesList = new ArrayList<>();
-
         try {
             for (UUID id : challengeIds) {
                 //TODO: missing check if UUID is correctly constructed.
-
                 //TODO: missing call repository for get statistics of challenge.
-
                 //TODO: delete below code when uppers todo are implemented.
                 challengesList.add(new ChallengeStatisticsDto(id, random.nextInt(1000), random.nextFloat(100)));
             }
@@ -224,21 +200,15 @@ public class UserSolutionServiceImp implements IUserSolutionService {
         }
         return Mono.just(challengesList);
     }
-
     @Override
     public Mono<Long> getBookmarkCountByIdChallenge(UUID idChallenge) {
         return userSolutionRepository.countByChallengeIdAndBookmarked(idChallenge, true);
     }
-
     @Override
     public Mono<Float> getChallengeUsersPercentage(UUID idChallenge) {
-
         Mono<Long> startedChallengesCount = userSolutionRepository.findByChallengeIdAndStatus(idChallenge, ChallengeStatus.STARTED).count();
-
         Mono<Long> endedChallengesCount = userSolutionRepository.findByChallengeIdAndStatus(idChallenge, ChallengeStatus.ENDED).count();
-
         Mono<Long> allChallenges = userSolutionRepository.findByChallengeId(idChallenge).count();
-
         Mono<Float> percentage = startedChallengesCount.zipWith(endedChallengesCount, (value1, value2) -> value1 + value2)
                 .flatMap(sum -> allChallenges.flatMap(value3 -> {
                     if (value3 == 0) {
@@ -246,24 +216,6 @@ public class UserSolutionServiceImp implements IUserSolutionService {
                     }
                     return Mono.just((sum * 100f) / value3);
                 }));
-
         return percentage;
-    }
-
-    private Flux<UserSolutionDocument> getUserSolutions() {
-        return userSolutionRepository.findAll();
-    }
-
-    private Flux<UserSolutionDocument> getUserSolutionsChallenge(List<UserSolutionDocument> userSolutions, UUID
-            challengeId) {
-        List<UserSolutionDocument> userSolutionsChallenge = userSolutions.stream()
-                .filter(us -> challengeId.equals(us.getChallengeId()))
-                .toList();
-
-        if (userSolutionsChallenge.isEmpty()) {
-            return Flux.error(new ChallengeNotFoundException(String.format(CHALLENGE_NOT_FOUND_ERROR, challengeId)));
-        }
-
-        return Flux.fromIterable(userSolutionsChallenge);
     }
 }
